# prl-highlight

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bundle/PRL.tmbundle/: info.plist
bundle/PRL.tmbundle/Preferences/: Comments.tmPreferences  Typing Pairs.tmPreferences
bundle/PRL.tmbundle/Syntaxes/: PRL.tmLanguage.json  README.md
bundle/live-templates/: prl.xml
scripts/: locate_bundle.py
src/prl_highlight/: tokenizer.py
src/prl_highlight/grammar/: prl.tmLanguage.json
tests/: conftest.py  helpers.py  test_bracket_generic_types.py  test_bundle_folder_scaffold.py  test_comment_and_bracket_preferences.py  test_constraint_forms.py  test_construct_scope_regression.py  test_embedded_python_rhs.py  test_field_default_values.py  test_fixture_wide_smoke.py  test_fixtures.py  test_literals.py  test_live_templates.py  test_locate_bundle.py  test_operators_and_comments.py  test_pattern_syntax.py  test_readme_install_instructions.py  test_structural_keywords.py  test_tag_annotations.py  test_tokenizer.py  test_type_and_field_names.py  test_variable_references.py
tests/fixtures/: dummy_grammar.json
tests/fixtures/prl_examples/: SOURCE.md  aggregation.prl  blocks_world.prl  compact_patterns.prl  disjunction.prl  event_stream.prl  existence_check.prl  family_tree.prl  fraud_detection.prl  identity_key.prl  imported_types.prl  inheritance.prl  loan_application.prl  negation.prl  self_modify.prl  sharing.prl  temperature_alarm.prl  universal.prl
