[project]
name = "prl-highlight"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "radon>=6.0.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prl_highlight"]
